--- a/public/index.html
+++ b/public/index.html
@@ -260,6 +260,6 @@
     </main>
 
     <script src="script.js"></script>
-    <script src="background.js"></script>
+    <!-- <script src="background.js"></script> -->
 </body>
 </html>
