feat: Update registration process to handle file uploads and user data submission

--- a/public/registration.html
+++ b/public/registration.html
@@ -181,7 +181,8 @@
                 <div class="form-group">
                     <label for="idCardUpload">ID Card Upload*</label>
                     <div class="file-upload-container">
-                        <input type="file" id="idCardUpload" name="idCardUpload" class="file-input" accept="image/*" required>
+                       <!-- Replace the existing file upload input with this -->
+                        <input type="file" id="idCardUpload" name="idCard" class="file-input" accept="image/*" required>
                         <label for="idCardUpload" class="file-upload-btn" style="color: white;">Choose File</label>
                         <span id="fileChosen">No file chosen</span>
                     </div>
